tries to fix button styling on iphone

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,6 +82,9 @@ option {
 }
 
 input[type="submit"] {
+	-webkit-appearance: none;
+	border-radius: 0;
+	-webkit-border-radius: 0;
 	position: relative;
 	box-shadow: 3px 3px 3px #888888;
 	display: inline-block;
